tests/fixtures/positive/comments/UndocumentedPublicClass.kt
package comments

class Foo {
    fun doSomething() {
        println("hello")
    }
}
