tests/fixtures/negative/comments/UndocumentedPublicFunction.kt
package comments

class Example {
    /** Documented function with KDoc. */
    fun bar() {
        println("hello")
    }
}
